create github pages

--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nAztTUjoMusI9FoIDG26vC5RhiC8mGk/nKDuL+syMrFvX97mfrYGW2avDiRIBBOnB+kRUvM/CEgmxenc9yN4941vLwSKzPWann7xEbj8EA0SJlyx67jGs4vc9LJvXEH1">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="snUGc48BpE3Nu1KPNiHbnn/Xm7u2amp/9NS53EiDcYyHrEXoX+OozWrfd/s5q6fr+wVZmKEHVkh2p+UrFzB7aMXkdovorRiuimehZ6Md9kxSbdJNn4xcpA4NvQcOKtvF">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
