create github pages

--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UanQjReU/tVaOfxN61pQARtnf+sPPrrOPKz7SUGoTyDPOU6kPdDruuZODS3vjQ9UiJ20MCoIW4fdhj7pn2icgkZcE7nHenw+p82PPdgFaRPFbcPW9aKZTSTAvMxM5O5d">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7T/OpWLLNsIf2DfgrjI/LfD4c64SNXNrxmxh8ZiCKiFhJ8fKItFiwHUyZ71FPWr9x3p7tbo4t+CjyawcToetqSXRgEpyNhtJlJwuBLiItdjrxjSgFOf0KZR7Zc32cy0A">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
