create github pages

--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zNzoqnWlaz3nkV9cfj8mxDsOvFrnVw9YAInW/fMHAZTiRVeK7rdCEdOuhO5kJXKZkXN43OGzY+Hy1jgbr5sR87AFiDTfuDCYdedz7zbS4otSF0ndPdfLM4O7mFGOp/A2">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FBoA5od/fFoFKZrY9lKsnJ1CPVrgde7NPfri0lU3y4sEQPRa+wPu7UTmm0a6fy2cQOdh1omyOtaRfQnYaN//RwViKwhqQv2N2tGio9wpOEJR2iuov/BrwDP91uRDwy3J">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
