--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7T/OpWLLNsIf2DfgrjI/LfD4c64SNXNrxmxh8ZiCKiFhJ8fKItFiwHUyZ71FPWr9x3p7tbo4t+CjyawcToetqSXRgEpyNhtJlJwuBLiItdjrxjSgFOf0KZR7Zc32cy0A">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Myuf35Sfl6WCzZNreeLA1/j3WAjpQ1Jh0ohRc0fptLtPMvj2ObTx2n1kVzz5PYZ/rAP77HiYP2pjOXihj4qR9Rh/JfgOn32tlzniDkJ9KLd6qr1jxGcFEc8Z85UcxKn5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
