create github pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -525,7 +525,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4PadGJcAHi1/se/O5YsxfQlQ+q3zgXaK35heMZ+TMkfWurAoWRtnJsFqM++X30E5Q7K7Gsca0Ds90Fohfz8ngAxX9K9PMxDFqo51v+AiOQQny5M3XHhDYmy3zIRwIGaM">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xM47mRLVdFPvs+yZZaE8g6hAJrLgI7BGuWyPcMkIT2L0nxuchOd03EXfIxyDP5kgZLYGEJz2gVkDu27I32obJbmxh61WlJPUQzB2ARuWpLK7RulT+vN8iEpAgqhOJtg/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -566,7 +566,7 @@
                 
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
                     كما يمكنكم مراسلتنا عن طريق الواتساب</h3>
-                <div class="mbr-section-btn align-center py-4"><a class="btn btn-danger display-4" href="https://mobirise.co"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>إرسال</a></div>
+                <div class="mbr-section-btn align-center py-4"><a class="btn btn-danger display-4" href="https://api.whatsapp.com/send?phone=966509586715" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>إرسال</a></div>
             </div>
         </div>
     </div>
@@ -598,7 +598,7 @@
                         <div class="b b-phone">
                             <h5 class="align-left mbr-fonts-style m-0 display-5">رقم الجوال</h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                0534668673</p>
+                                0509586715</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
