--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YwxUFBlyzNlah4nXem0HozVsQNve7loquH2QRT1zSEH67QPmz03WpO4/vYktZAgJSBGjJt9MYujMVWZi2Q1LzMQ6ibrJgjHRO3fGflXZj0LV8A+sjSbyWPsfjJFlJjYm">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OuhGdk5EoOwLSiUU7PFk00SzL7WUh1Tp2zC1s9irTi211F/ivMQ/dNJkGlQam3lTZkoqtOcCE/1I+HQv2dVpl/pvbK5DIANSPMrw272l2okliEks0Z4hBzZG/H1HoJnj">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
