create github pages

--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TchHRMj0jG++SUdnSMkC4VavMGEJSXXWugkox15OqpZrCNVP0i7PSLFmPnOYR4h/xkqcH/pad159OdK/15zyJf/Qp+XLE3wuNsO+4vVa4vTHr2+kJIXUuffmf9gU4mUE">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6hxzBBZbZLv8VkPVqnkuJRoz8iK8vWQM0xzRLDIZMgUHq3weYh1fVkCic8iAAyX+vkqwm1xi2f5aerpObjCeTczCNJBsJwmKZKeTSffyKwLy2wi+Ow0yUoe9MM0eTxzW">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
