create github pages

--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="StZJNeJZmIoQBzv2q94dTkPU2KemKC4Jfv4ntpaT15Qb4cwwcW1fmydeGjUD1Wff3E1O3TfNJamTve7893C8YbVhLWNX1YPdTqvCpeay6emrLBsRdtbj1ZIuhIGNYllz">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dmOy7fRvhkTeji6DBdJRwCy2Ms4zBmFJqs78shz87kBaJtLpLXRznJ8z3iMGZ/2DsXhIip4BQqmXpBcS7mgIUPP46nxQlx42ym3eIcmyDp3x91NzypNeax1BdcKBkSKi">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
