create github pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/logo-2-314x122.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>الرئيسية | فكرة تيك</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -306,7 +306,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">MVP<br>منتج نموذج أولي</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">بناء نموذج أولي للمشروع لفهم متطلبات السوق ومدى نجاح المشروع في أسرع وقت وأقل جهد وتملفة ويساهم ذلك بسرعة دخول السوق والإحتكاك مع العملاء مبكرا لفهم متطلباتهم وتحقيقها وأيضا تفادي هدر موارد المشروع</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">بناء نموذج أولي للمشروع لفهم متطلبات السوق ومدى نجاح المشروع في أسرع وقت وأقل جهد وتكلفة ويساهم ذلك بسرعة دخول السوق والإحتكاك مع العملاء مبكرا لفهم متطلباتهم وتحقيقها وأيضا تفادي هدر موارد المشروع</h3>
                 
             </div>
         </div>
@@ -606,7 +606,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="is3j799kffCzPBnJHiktN//tKk9l9earvx+YJu8qwE9H7F+YoYdUU4PdMrp3u/91Ugl1F5EftmvP1eUOye9eCG60kINnx+uDgv4xl/BIJrK97ydmNQeWDQZSB8Va6aXF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RN0hrHlq3lueKj4lsCPhIqEE/MZccMpaeaBaAB5BxMG4zv1cTbxVeICXZTSYb9Q/VSbY6cXJsw+g/4iWD7A1vqD0osLvjU1xRZikphhvTa7XjQx3aXnaaJfpjhmfsU01">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
