--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="x2mjEtQwteJQ6VCaTTwmqYimX5qaO6bDkID4ld9TchUZBXYUgJXtHApjeuD9NDGKC25zgnNac6CIwXEBYuWuqm8dYhs7HWHvXcwE6z7Lvg+tFjf1llINKn90o73+gd7n">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2bEdZoBF6Icn+xZnR7oiUpkcPRxgIgO6wKDrU7M5L7y70xOlaf6sNsrQIPnjUx0wCuNVRfX8ZN+afQMpWteACdzMaFMkrVMtZSSeUAvLEcFWCLbd89+MQISMAGU4yrz0">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
