create github pages

--- a/payement.html
+++ b/payement.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section once="footers" class="cid-rra6HgoXVT" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section once="footers" class="cid-rra6HgoXVT" id="footer7-1k">
 
     
 
