--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="header4 cid-rqDnp1LDDF mbr-parallax-background" id="header4-5">
 
     
 
@@ -170,7 +170,7 @@
                             
                         </div>
                     </div>
-                <div class="mbr-figure" style="width: 89%;">
+                <div class="mbr-figure" style="width: 46%;">
                      <img src="assets/images/mbr-1-950x633.jpg" alt="Mobirise" title="">
                 </div>
             </div>
@@ -670,7 +670,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4Kg3NXlDwnD4ea4wcfNvRPLsTXFtwZJ2/TZYdaFSDNn32NMKZM/AygSae5tuET/IfWW5CQGMsyoqxUXOP07amPW7n+TOrZV038mwAYE83QFFASzhUwf742UT/yNB3IQu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N8lvDM5huZxKczoHgIjoJrZg+JtnzWxldXx3cLE1C37hRtD6RjkkESVwPSkacnPuBbqTRWCTIrlGyWWn55HOLxLjKBOUfsMH1Gmg5mJqrhHoyFi0o1X0v6LybtiJQmd7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا وسيتم الرد لاحقا</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -747,7 +747,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PsyPFu0F3UJkBAcJXZ4vSAlHoDL5IhJrdgz3vDsAl0QWsf7CjDiSSN/3D2Q49gqz/U8Kf8jIZYk7yB2oyCPz3Djd6nLSKxX/4UiAnLG68LJEh3es2G5LJ+hTsio87IV+">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nOP04ZgPwIhRZFYxrjH7BtKkYMVNXBXwrHzBqMvLHH6UDjMpCxj+hyROWyyXMnfKTjfSyOWz4C1LdZSIEtkVetfxwFzWe1FKeXPMz4Rz0VFLIdafKfjWhzIgXUznP9Va">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
